@@ -4,12 +4,11 @@ Title: an R package for visualization and annotation of phylogenetic trees with 
 Version: 1.7.1
 Authors@R: c(
 	   person("Guangchuang", "Yu", email = "guangchuangyu@gmail.com", role = c("aut", "cre")),
-	   person("Tommy Tsan-Yuk", "Lam", email = "tylam.tommy@gmail.com", rol = "aut"),
+	   person("Tommy Tsan-Yuk", "Lam", email = "tylam.tommy@gmail.com", rol = "ths"),
 	   person("Justin", "Silverman", email = "jsilve24@gmail.com", rol = "ctb", comment = "geom_balance"),
-	   person("Casey", "Dunn", email = "casey_dunn@brown.edu", rol = "ctb", comment = "propose using txtConnection so that parser functions can use tree strings as input")
+	   person("Casey", "Dunn", email = "casey_dunn@brown.edu", rol = "ctb",
+	          comment = "propose using txtConnection so that parser functions can use tree strings as input")
 	   )
-Author: Guangchuang Yu <guangchuangyu@gmail.com> and Tommy Tsan-Yuk Lam with contributions from
-   	Justin Silverman and Casey Dunn.
 Maintainer: Guangchuang Yu <guangchuangyu@gmail.com>
 Description: 'ggtree' extends the 'ggplot2' plotting system which implemented the grammar of graphics.
 	     'ggtree' is designed for visualization and annotation of phylogenetic trees with their covariates and other associated data.
